[package]
name = "vec-array-perf-rust"
version = "0.1.0"
authors = ["supercurio"]

[features]
# feature used to write the buffers on disk in order to
# the the outputs' integrity
write_buffers = []


[profile.release]
debug-assertions = false
codegen-units = 1
opt-level = 3
debug = 0
lto = true
overflow-checks = false  
